// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Slider > renders correctly with class 1`] = `
<div>
  
  <span
    aria-disabled="false"
    class="relative flex items-center select-none touch-none w-64"
    data-orientation="horizontal"
    data-slider-impl=""
    dir="ltr"
    style="--reka-slider-thumb-transform: translateX(-50%);"
  >
    
    
    
    <span
      class="relative bg-accented overflow-hidden rounded-full grow h-2"
      data-orientation="horizontal"
    >
      
      <span
        class="absolute h-full rounded-full bg-primary"
        data-orientation="horizontal"
        style="left: 0%; right: 100%;"
      >
        
        
      </span>
      
    </span>
    <span
      aria-label="Slider thumb"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="block rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 cursor-pointer ring-primary focus-visible:outline-primary size-4"
      data-orientation="horizontal"
      data-reka-collection-item=""
      role="slider"
      style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
      tabindex="0"
    >
      
      
    </span>
    
    <!--v-if-->
    
    
  </span>
  
</div>
`;

exports[`Slider > renders correctly with disabled 1`] = `
<div>
  
  <span
    aria-disabled="true"
    class="relative flex w-full items-center select-none touch-none opacity-75 cursor-not-allowed"
    data-disabled=""
    data-orientation="horizontal"
    data-slider-impl=""
    dir="ltr"
    style="--reka-slider-thumb-transform: translateX(-50%);"
  >
    
    
    
    <span
      class="relative bg-accented overflow-hidden rounded-full grow h-2"
      data-disabled=""
      data-orientation="horizontal"
    >
      
      <span
        class="absolute h-full rounded-full bg-primary"
        data-disabled=""
        data-orientation="horizontal"
        style="left: 0%; right: 100%;"
      >
        
        
      </span>
      
    </span>
    <span
      aria-label="Slider thumb"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="block rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-4 cursor-not-allowed"
      data-disabled=""
      data-orientation="horizontal"
      data-reka-collection-item=""
      role="slider"
      style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
    >
      
      
    </span>
    
    <!--v-if-->
    
    
  </span>
  
</div>
`;

exports[`Slider > renders correctly with id 1`] = `
<div>
  
  <span
    aria-disabled="false"
    class="relative flex w-full items-center select-none touch-none"
    data-orientation="horizontal"
    data-slider-impl=""
    dir="ltr"
    id="volume"
    style="--reka-slider-thumb-transform: translateX(-50%);"
  >
    
    
    
    <span
      class="relative bg-accented overflow-hidden rounded-full grow h-2"
      data-orientation="horizontal"
    >
      
      <span
        class="absolute h-full rounded-full bg-primary"
        data-orientation="horizontal"
        style="left: 0%; right: 100%;"
      >
        
        
      </span>
      
    </span>
    <span
      aria-label="Slider thumb"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="block rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 cursor-pointer ring-primary focus-visible:outline-primary size-4"
      data-orientation="horizontal"
      data-reka-collection-item=""
      role="slider"
      style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
      tabindex="0"
    >
      
      
    </span>
    
    <!--v-if-->
    
    
  </span>
  
</div>
`;

exports[`Slider > renders correctly with min and max 1`] = `
<div>
  
  <span
    aria-disabled="false"
    class="relative flex w-full items-center select-none touch-none"
    data-orientation="horizontal"
    data-slider-impl=""
    dir="ltr"
    style="--reka-slider-thumb-transform: translateX(-50%);"
  >
    
    
    
    <span
      class="relative bg-accented overflow-hidden rounded-full grow h-2"
      data-orientation="horizontal"
    >
      
      <span
        class="absolute h-full rounded-full bg-primary"
        data-orientation="horizontal"
        style="left: 0%; right: 100%;"
      >
        
        
      </span>
      
    </span>
    <span
      aria-label="Slider thumb"
      aria-orientation="horizontal"
      aria-valuemax="50"
      aria-valuemin="0"
      aria-valuenow="0"
      class="block rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 cursor-pointer ring-primary focus-visible:outline-primary size-4"
      data-orientation="horizontal"
      data-reka-collection-item=""
      role="slider"
      style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
      tabindex="0"
    >
      
      
    </span>
    
    <!--v-if-->
    
    
  </span>
  
</div>
`;

exports[`Slider > renders correctly with size lg 1`] = `
<div>
  
  <span
    aria-disabled="false"
    class="relative flex w-full items-center select-none touch-none"
    data-orientation="horizontal"
    data-slider-impl=""
    dir="ltr"
    style="--reka-slider-thumb-transform: translateX(-50%);"
  >
    
    
    
    <span
      class="relative bg-accented overflow-hidden rounded-full grow h-2.5"
      data-orientation="horizontal"
    >
      
      <span
        class="absolute h-full rounded-full bg-primary"
        data-orientation="horizontal"
        style="left: 0%; right: 100%;"
      >
        
        
      </span>
      
    </span>
    <span
      aria-label="Slider thumb"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="block rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 cursor-pointer ring-primary focus-visible:outline-primary size-5"
      data-orientation="horizontal"
      data-reka-collection-item=""
      role="slider"
      style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
      tabindex="0"
    >
      
      
    </span>
    
    <!--v-if-->
    
    
  </span>
  
</div>
`;

exports[`Slider > renders correctly with size md 1`] = `
<div>
  
  <span
    aria-disabled="false"
    class="relative flex w-full items-center select-none touch-none"
    data-orientation="horizontal"
    data-slider-impl=""
    dir="ltr"
    style="--reka-slider-thumb-transform: translateX(-50%);"
  >
    
    
    
    <span
      class="relative bg-accented overflow-hidden rounded-full grow h-2"
      data-orientation="horizontal"
    >
      
      <span
        class="absolute h-full rounded-full bg-primary"
        data-orientation="horizontal"
        style="left: 0%; right: 100%;"
      >
        
        
      </span>
      
    </span>
    <span
      aria-label="Slider thumb"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="block rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 cursor-pointer ring-primary focus-visible:outline-primary size-4"
      data-orientation="horizontal"
      data-reka-collection-item=""
      role="slider"
      style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
      tabindex="0"
    >
      
      
    </span>
    
    <!--v-if-->
    
    
  </span>
  
</div>
`;

exports[`Slider > renders correctly with size sm 1`] = `
<div>
  
  <span
    aria-disabled="false"
    class="relative flex w-full items-center select-none touch-none"
    data-orientation="horizontal"
    data-slider-impl=""
    dir="ltr"
    style="--reka-slider-thumb-transform: translateX(-50%);"
  >
    
    
    
    <span
      class="relative bg-accented overflow-hidden rounded-full grow h-1.5"
      data-orientation="horizontal"
    >
      
      <span
        class="absolute h-full rounded-full bg-primary"
        data-orientation="horizontal"
        style="left: 0%; right: 100%;"
      >
        
        
      </span>
      
    </span>
    <span
      aria-label="Slider thumb"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="block rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 cursor-pointer ring-primary focus-visible:outline-primary size-3"
      data-orientation="horizontal"
      data-reka-collection-item=""
      role="slider"
      style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
      tabindex="0"
    >
      
      
    </span>
    
    <!--v-if-->
    
    
  </span>
  
</div>
`;

exports[`Slider > renders correctly with step 1`] = `
<div>
  
  <span
    aria-disabled="false"
    class="relative flex w-full items-center select-none touch-none"
    data-orientation="horizontal"
    data-slider-impl=""
    dir="ltr"
    style="--reka-slider-thumb-transform: translateX(-50%);"
  >
    
    
    
    <span
      class="relative bg-accented overflow-hidden rounded-full grow h-2"
      data-orientation="horizontal"
    >
      
      <span
        class="absolute h-full rounded-full bg-primary"
        data-orientation="horizontal"
        style="left: 0%; right: 100%;"
      >
        
        
      </span>
      
    </span>
    <span
      aria-label="Slider thumb"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="block rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 cursor-pointer ring-primary focus-visible:outline-primary size-4"
      data-orientation="horizontal"
      data-reka-collection-item=""
      role="slider"
      style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
      tabindex="0"
    >
      
      
    </span>
    
    <!--v-if-->
    
    
  </span>
  
</div>
`;

exports[`Slider > renders correctly with tooltip 1`] = `
<div>
  
  <span
    aria-disabled="false"
    class="relative flex w-full items-center select-none touch-none"
    data-orientation="horizontal"
    data-slider-impl=""
    dir="ltr"
    style="--reka-slider-thumb-transform: translateX(-50%);"
  >
    
    
    
    <span
      class="relative bg-accented overflow-hidden rounded-full grow h-2"
      data-orientation="horizontal"
    >
      
      <span
        class="absolute h-full rounded-full bg-primary"
        data-orientation="horizontal"
        style="left: 0%; right: 100%;"
      >
        
        
      </span>
      
    </span>
    
    
    <span
      aria-label="Slider thumb"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="block rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 cursor-pointer ring-primary focus-visible:outline-primary size-4"
      data-grace-area-trigger=""
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-state="closed"
      role="slider"
      style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
      tabindex="0"
    >
      
      
    </span>
    <!--teleport start-->
    <!--teleport end-->
    
    
    
    <!--v-if-->
    
    
  </span>
  
</div>
`;

exports[`Slider > renders correctly with ui 1`] = `
<div>
  
  <span
    aria-disabled="false"
    class="relative flex w-full items-center select-none touch-none"
    data-orientation="horizontal"
    data-slider-impl=""
    dir="ltr"
    style="--reka-slider-thumb-transform: translateX(-50%);"
  >
    
    
    
    <span
      class="relative overflow-hidden rounded-full grow h-2 bg-red-500"
      data-orientation="horizontal"
    >
      
      <span
        class="absolute h-full rounded-full bg-primary"
        data-orientation="horizontal"
        style="left: 0%; right: 100%;"
      >
        
        
      </span>
      
    </span>
    <span
      aria-label="Slider thumb"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="block rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 cursor-pointer ring-primary focus-visible:outline-primary size-4"
      data-orientation="horizontal"
      data-reka-collection-item=""
      role="slider"
      style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
      tabindex="0"
    >
      
      
    </span>
    
    <!--v-if-->
    
    
  </span>
  
</div>
`;
